# petabroad

./: Cargo.toml  README.md  docker-compose.yml  index.html  styles.css
backend/: Cargo.toml  Dockerfile
backend/src/: country_info.rs  database.rs  main.rs
frontend/: Cargo.toml  Dockerfile  index.html  styles.css
frontend/src/: main.rs  settings.rs
frontend/src/components/: country.rs  country_info.rs  country_view.rs  info_block.rs  main_window.rs  map.rs  mod.rs
frontend/src/utils/: country_data.rs  log.rs  map_data.rs  mod.rs  timer.rs  viewbox.rs
src/: main.rs
src/components/: country.rs  country_info.rs  country_view.rs  info_block.rs  main_window.rs  map.rs  map_data.rs  mod.rs
src/utils/: viewbox.rs
