[package]
name = "petabroad-backend"
version = "0.0.1"
edition = "2021"
authors = ["Alex Mikhalevich <alex@mikhalevich.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
regex = "1"
mongodb = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
